@@ -235,7 +235,7 @@ basevalidator_forcontrol_unsupported	= {0}.ForControl is not supported.
 
 comparevalidator_controltocompare_invalid = TCompareValidator.ControlToCompare contains an invalid control ID path.
 
-tlistcontrolvalidator_invalid_control	= {0}.ControlToValidate contains an invalid TListControl ID path, "{1}" is a {2}.
+listcontrolvalidator_invalid_control	= {0}.ControlToValidate contains an invalid TListControl ID path, "{1}" is a {2}.
 
 repeater_template_required				= TRepeater.{0} requires a template instance implementing ITemplate interface.
 datalist_template_required				= TDataList.{0} requires a template instance implementing ITemplate interface.
