@@ -106,6 +106,16 @@ class TCheckBoxList extends TListControl implements IRepeatInfoUser, INamingCont
 	}
 
 	/**
+	 * Gets the name of the javascript class responsible for performing postback for this control.
+	 * This method overrides the parent implementation.
+	 * @return string the javascript class name
+	 */
+	protected function getClientClassName()
+	{
+		return 'Prado.WebUI.TCheckBoxList';
+	}
+
+	/**
 	 * @return string the alignment of the text caption, defaults to 'Right'.
 	 */
 	public function getTextAlign()
