@@ -64,6 +64,16 @@ Prado::using('System.Web.UI.WebControls.TBaseValidator');
 class TListControlValidator extends TBaseValidator
 {
 	/**
+	 * Gets the name of the javascript class responsible for performing validation for this control.
+	 * This method overrides the parent implementation.
+	 * @return string the javascript class name
+	 */
+	protected function getClientClassName()
+	{
+		return 'Prado.WebUI.TListControlValidator';
+	}
+
+	/**
 	 * @return integer min number of selections. Defaults to -1, meaning not set.
 	 */
 	public function getMinSelection()
@@ -195,7 +205,7 @@ class TListControlValidator extends TBaseValidator
 		if(!$control instanceof TListControl)
 		{
 			throw new TConfigurationException(
-				'tlistcontrolvalidator_invalid_control',
+				'listcontrolvalidator_invalid_control',
 				$this->getID(),$this->getControlToValidate(), get_class($control));
 		}
 
