@@ -43,6 +43,16 @@ Prado::using('System.Web.UI.WebControls.TBaseValidator');
 class TRangeValidator extends TBaseValidator
 {
 	/**
+	 * Gets the name of the javascript class responsible for performing validation for this control.
+	 * This method overrides the parent implementation.
+	 * @return string the javascript class name
+	 */
+	protected function getClientClassName()
+	{
+		return 'Prado.WebUI.TRangeValidator';
+	}
+
+	/**
 	 * @return string the minimum value of the validation range.
 	 */
 	public function getMinValue()
